# automata_faults

./: .gitignore  README.md  pyproject.toml
automata_faults/: __init__.py  cli.py  core.py  loaders.py  main.py
data/: automata.json  encoding_schema.json
notebooks/: ambiguity_check.ipynb  automata.py  faults.ipynb  minimized.ipynb
