[project]
name = "automata-faults"
version = "0.1.0"
description = ""
authors = [
    {name = "maksimkins",email = "maks.aleshkov.04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "more-itertools (>=10.6.0,<11.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "import-ipynb (>=0.2,<0.3)",
    "ipynb (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
automata-faults = "automata_faults.cli:main"